# agentmark

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  index.html
.github/workflows/: agentmark-verify.yml  test.yml  tests.yml
agentmark-github-app/: README.md  package-lock.json  package.json  wrangerl.toml  wrangler.toml
agentmark-github-app/src/: challenge.js  github.js  index.js  issue.js  pullrequest.js  webhook.js
docs/: API.md
sdk/python/: README.md  pyproject.toml
sdk/python/agentmark/: __init__.py  challenge.py  cli.py  core.py  manifest.py  providers.py  registry.py  signing.py  verifier.py
sdk/python/tests/: test_sdk.py
site/: index.html
