[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmark"
version = "0.1.0"
description = "Cryptographic provenance for AI-generated code"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "CloudDon Research", email = "research@clouddon.ai" }]
keywords = ["ai", "provenance", "code", "verification", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=46.0.0",  # pinned to safe version — see SECURITY.md
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.50.0"]
all       = ["anthropic>=0.40.0", "openai>=1.50.0", "requests>=2.31.0"]
dev       = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
agentmark = "agentmark.cli:main"

[project.urls]
Homepage      = "https://agentmark.dev"
Documentation = "https://agentmark.dev/docs"
Repository    = "https://github.com/aiagentmark-dev/agentmark"
"Bug Tracker" = "https://github.com/aiagentmark-dev/agentmark/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
